--- a/meme/index.html
+++ b/meme/index.html
@@ -10,7 +10,7 @@
     <i class="incl-fonts"></i>
     <link rel="stylesheet" href="./res/css/style.css">
     <script src="https://kit.fontawesome.com/ad53433535.js" crossorigin="anonymous"></script>
-    <script src="./res/js/includes.js" data-includes="navbar,./res/includes/nav.html|fonts,./res/includes/fonts.html|byme,./res/includes/meme_by_me.html"></script>
+    <script src="./res/js/includes.js" data-includes="navbar,./res/includes/nav.html|fonts,./res/includes/fonts.html|byme,./meme/includes/meme_by_me.html"></script>
 </head>
 
 <body>
@@ -18,86 +18,83 @@
     <main>
         <h1 class="primary-text">Meme page</h1>
         <h2 class="secondary-text">
-            This page contains some of my favourite memes.<br>
-            The ones made by me will contain a <i class="incl-byme"></i> icon.
+            This page contains some of my favourite memes.<br> The ones made by me will contain a <i class="incl-byme"></i> icon.
         </h2>
         <ul class="memes-ul">
             <li>
                 <h3 class="tertiary-text">1.<i class="incl-byme"></i></h3><br>
-                <img src="./res/img/memes/1.png">
+                <img src="./meme/img/1.png">
             </li>
             <li>
                 <h3 class="tertiary-text">2.<i class="incl-byme"></i></h3><br>
-                <img src="./res/img/memes/2.png">
+                <img src="./meme/img/2.png">
             </li>
             <li>
                 <h3 class="tertiary-text">3.<i class="incl-byme"></i></h3><br>
-                <img src="./res/img/memes/3.png">
+                <img src="./meme/img/3.png">
             </li>
             <li>
                 <h3 class="tertiary-text">4.<i class="incl-byme"></i></h3><br>
-                <img src="./res/img/memes/4.png">
+                <img src="./meme/img/4.png">
             </li>
             <li>
                 <h3 class="tertiary-text">5.</h3><br>
-                <img src="./res/img/memes/5.jpg">
+                <img src="./meme/img/5.jpg">
             </li>
             <li>
                 <h3 class="tertiary-text">6.</h3><br>
-                <img src="./res/img/memes/6.jpg">
+                <img src="./meme/img/6.jpg">
             </li>
             <li>
                 <h3 class="tertiary-text">7.</h3><br>
-                <img src="./res/img/memes/7.jpg">
+                <img src="./meme/img/7.jpg">
             </li>
             <li>
                 <h3 class="tertiary-text">8.</h3><br>
-                <img src="./res/img/memes/8.jpg">
+                <img src="./meme/img/8.jpg">
             </li>
             <li>
                 <h3 class="tertiary-text">9.</h3><br>
-                <img src="./res/img/memes/9.jpg">
+                <img src="./meme/img/9.jpg">
             </li>
             <li>
                 <h3 class="tertiary-text">10.</h3><br>
-                <img src="./res/img/memes/10.jpg">
+                <img src="./meme/img/10.jpg">
             </li>
             <li>
                 <h3 class="tertiary-text">11.</h3><br>
-                <img src="./res/img/memes/11.jpg">
+                <img src="./meme/img/11.jpg">
             </li>
             <li>
                 <h3 class="tertiary-text">12.</h3><br>
-                <img src="./res/img/memes/12.jpg">
+                <img src="./meme/img/12.jpg">
             </li>
             <li>
                 <h3 class="tertiary-text">13.</h3><br>
-                <img src="./res/img/memes/13.jpg">
+                <img src="./meme/img/13.jpg">
             </li>
             <li>
                 <h3 class="tertiary-text">14.</h3><br>
-                <img src="./res/img/memes/14.jpg">
+                <img src="./meme/img/14.jpg">
             </li>
             <li>
                 <h3 class="tertiary-text">15.<i class="incl-byme"></i></h3><br>
-                <img src="./res/img/memes/15.jpg">
+                <img src="./meme/img/15.jpg">
             </li>
             <li>
                 <h3 class="tertiary-text">16.<i class="incl-byme"></i></h3>
-                <img src="./res/img/memes/16.png">
+                <img src="./meme/img/16.png">
                 <p class="content-paragraph">A very cringe meme my english class started with.</p>
             </li>
             <li>
                 <h3 class="tertiary-text">17.</h3><br>
-                <img src="./res/img/memes/17.png">
+                <img src="./meme/img/17.png">
             </li>
             <li>
                 <h3 class="tertiary-text">18.<i class="incl-byme"></i></h3>
-                <img src="./res/img/memes/18.png">
+                <img src="./meme/img/18.png">
                 <p class="content-paragraph">
-                    Translation:<br>
-                    Me, while my biology teacher is asking me questions<br>
-                    My copy of the class schedule, my clock and my notes<br>
+                    Translation:<br> Me, while my biology teacher is asking me questions<br> My copy of the class schedule, my clock and my notes<br>
                 </p>
             </li>
         </ul>
