--- a/projects/index.html
+++ b/projects/index.html
@@ -42,7 +42,7 @@
                 <tr>
                     <th>Name</th>
                     <th>Description</th>
-                    <th>Download(s)</th>
+                    <th>Links</th>
                 </tr>
             </thead>
             <tbody>
@@ -50,20 +50,18 @@
                     <td>CTF-Documentation</td>
                     <td>The rules of a game, called Capture the Flag (CTF)</td>
                     <td><a class="projects-download-link" onclick="downloads({
-                  'English pdf':'./res/downloads/CTF-Documentation/en/CTF-Documentation.pdf',
-                  'English html':'./res/downloads/CTF-Documentation/en/CTF-Documentation.html',
-                  'English md':'./res/downloads/CTF-Documentation/en/CTF-Documentation.md',
-                  'Bulgarian pdf':'./res/downloads/CTF-Documentation/bg/CTF-Documentation.pdf',
-                  'Bulgarian html':'./res/downloads/CTF-Documentation/bg/CTF-Documentation.html',
-                  'Bulgarian md':'./res/downloads/CTF-Documentation/bg/CTF-Documentation.md'
-                })">Choose language & file type</a></td>
+                        'English pdf':'./projects/downloads/CTF-Documentation/en/CTF-Documentation.pdf',
+                        'English html':'./projects/downloads/CTF-Documentation/en/CTF-Documentation.html',
+                        'English md':'./projects/downloads/CTF-Documentation/en/CTF-Documentation.md',
+                        'Bulgarian pdf':'./projects/downloads/CTF-Documentation/bg/CTF-Documentation.pdf',
+                        'Bulgarian html':'./projects/downloads/CTF-Documentation/bg/CTF-Documentation.html',
+                        'Bulgarian md':'./projects/downloads/CTF-Documentation/bg/CTF-Documentation.md'
+                    })">Download</a></td>
                 </tr>
                 <tr>
                     <td>SHU</td>
                     <td><b><i>Project temporarely on hold</i></b> A chrome extention that enables developers to make utility plugins for jitsimeet based systems like shkolo.bg.<br>The name comes from SHkoloUtilities.</td>
-                    <td><a href="https://github.com/GiggioG/shu/releases">Download from Github<br><i>*currently there is
-								no
-								release</i></a></td>
+                    <td><a target="_blank" href="https://github.com/GiggioG/shu/">Project Github Repo</a></td>
                 </tr>
             </tbody>
         </table>
