--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         </p>
         <h3 class="tertiary-text">What and why is this website?</h3>
         <p class="content-paragraph">
-            So, before I had a blog that you can see <a href="./old">here</a> or with the clock icon in<br> the navigation bar. It was kinda bad so I took it down and I made a new one<br> You can see all the pages on this site in the navigation bar on
-            the left/bottom of the site.
+            So, before I had a blog that you can see <a href="./old-blog">here</a> or with the clock icon in<br> the navigation bar. It was kinda bad so I took it down and I made a new one<br> You can see all the pages on this site in the navigation bar
+            on the left/bottom of the site.
         </p>
         <h3 class="tertiary-text">Blah blah blah</h3>
         <p class="content-paragraph">
