add some project to project page

--- a/projects/index.html
+++ b/projects/index.html
@@ -61,7 +61,37 @@
                 <tr>
                     <td>SHU</td>
                     <td><b><i>Project temporarely on hold</i></b> A chrome extention that enables developers to make utility plugins for jitsimeet based systems like shkolo.bg.<br>The name comes from SHkoloUtilities.</td>
-                    <td><a target="_blank" href="https://github.com/GiggioG/shu/">Project Github Repo</a></td>
+                    <td><a target="_blank" href="https://github.com/GiggioG/shu/">Shu Github Repo</a></td>
+                </tr>
+                <tr>
+                    <td>Flappy Bird</td>
+                    <td>A simple clone of flappy bird I made in Processing</td>
+                    <td><a target="_blank" href="https://github.com/GiggioG/flappy-bird/">Flappy Bird Github Repo</a></td>
+                </tr>
+                <tr>
+                    <td>Ghaincoin</td>
+                    <td>A cryptocurrency example. Still haven't even started</td>
+                    <td><a target="_blank" href="https://github.com/GiggioG/ghaincoin/">Ghaincoin Github Repo</a></td>
+                </tr>
+                <tr>
+                    <td>Pc-Remote</td>
+                    <td>gives control over keyboard and mouse via a node websocket server powered html interface</td>
+                    <td><a target="_blank" href="https://github.com/GiggioG/pc-remote/">Pc-Remote Github Repo</a></td>
+                </tr>
+                <tr>
+                    <td>Genadi Snowstorm</td>
+                    <td>A game about how Genadi dodges dangerous snowballs. My classmates and me made it together in my programming class.</td>
+                    <td><a target="_blank" href="https://github.com/GiggioG/GenadiSnowstorm/">Genadi Snowstorm Github Repo</a></td>
+                </tr>
+                <tr>
+                    <td>Machine Cells Snowstorm</td>
+                    <td>A ripoff version of Sam Hogan's Cell Machine. My classmates and me made it together in my programming class.</td>
+                    <td><a target="_blank" href="https://github.com/GiggioG/MachineCells/">Machine Cells Github Repo</a></td>
+                </tr>
+                <tr>
+                    <td>Notepad By User</td>
+                    <td>A simple batch script I wrote a while ago, that gives multiple people different txt files. "Accounts" have no passwords.</td>
+                    <td><a target="_blank" href="https://github.com/GiggioG/notepad-by-user/">Notepad By User Github Repo</a></td>
                 </tr>
             </tbody>
         </table>
