add funkmc to projects

--- a/projects/index.html
+++ b/projects/index.html
@@ -93,6 +93,12 @@
                     <td>A simple batch script I wrote a while ago, that gives multiple people different txt files. "Accounts" have no passwords.</td>
                     <td><a target="_blank" href="https://github.com/GiggioG/notepad-by-user/">Notepad By User Github Repo</a></td>
                 </tr>
+                <tr>
+                    <td>FunkMc</td>
+                    <td>A mcfunction library with useful functions.</td>
+                    <td><a target="_blank" href="https://github.com/GiggioG/funkmc/">FunkMC Github Repo</a></td>
+                </tr>
+            </tbody>
             </tbody>
         </table>
     </main>
