fix "machine cells snowstorm"

--- a/projects/index.html
+++ b/projects/index.html
@@ -84,7 +84,7 @@
                     <td><a target="_blank" href="https://github.com/GiggioG/GenadiSnowstorm/">Genadi Snowstorm Github Repo</a></td>
                 </tr>
                 <tr>
-                    <td>Machine Cells Snowstorm</td>
+                    <td>Machine Cells</td>
                     <td>A ripoff version of Sam Hogan's Cell Machine. My classmates and me made it together in my programming class.</td>
                     <td><a target="_blank" href="https://github.com/GiggioG/MachineCells/">Machine Cells Github Repo</a></td>
                 </tr>
