add bulgarian arabic to projects

--- a/projects/index.html
+++ b/projects/index.html
@@ -59,6 +59,15 @@
                     })">Download</a></td>
                 </tr>
                 <tr>
+                    <td>Bulgarian Arabic</td>
+                    <td>How to write the Bulgarian language with the Arabic script.</td>
+                    <td><a class="projects-download-link" onclick="downloads({
+                        'Bulgarian pdf':'./projects/downloads/bg-ar/bg-ar.pdf',
+                        'Bulgarian html':'./projects/downloads/bg-ar/bg-ar.html',
+                        'Bulgarian md':'./projects/downloads/bg-ar/bg-ar.md'
+                    })">Download</a></td>
+                </tr>
+                <tr>
                     <td>SHU</td>
                     <td><b><i>Project temporarely on hold</i></b> A chrome extention that enables developers to make utility plugins for jitsimeet based systems like shkolo.bg.<br>The name comes from SHkoloUtilities.</td>
                     <td><a target="_blank" href="https://github.com/GiggioG/shu/">Shu Github Repo</a></td>
