add some new projects

--- a/projects/index.html
+++ b/projects/index.html
@@ -107,6 +107,21 @@
                     <td>A mcfunction library with useful functions.</td>
                     <td><a target="_blank" href="https://github.com/GiggioG/funkmc/">FunkMC Github Repo</a></td>
                 </tr>
+                <tr>
+                    <td>CDL</td>
+                    <td>ConsoleDrawingLibrary - a c++ library for drawing in the console.</td>
+                    <td><a target="_blank" href="https://github.com/GiggioG/CDL">CDL Github Repo</a></td>
+                </tr>
+                <tr>
+                    <td>Bliznaci</td>
+                    <td>A command-line browser for the gemini:// protocol</td>
+                    <td><a target="_blank" href="https://github.com/GiggioG/bliznaci">Bliznaci Github Repo</a></td>
+                </tr>
+                <tr>
+                    <td>sdl2Base</td>
+                    <td>A basic SDL2 app all of my future SDL2 projects will be based on.</td>
+                    <td><a target="_blank" href="https://github.com/GiggioG/sdl2Base">sdl2Base Github Repo</a></td>
+                </tr>
             </tbody>
             </tbody>
         </table>
