remove some contacts

--- a/contact/index.html
+++ b/contact/index.html
@@ -10,8 +10,7 @@
     <i class="incl-fonts"></i>
     <link rel="stylesheet" href="./res/css/style.css">
     <script src="https://kit.fontawesome.com/ad53433535.js" crossorigin="anonymous"></script>
-    <script src="./res/js/includes.js"
-        data-includes="navbar,./res/includes/nav.html|fonts,./res/includes/fonts.html"></script>
+    <script src="./res/js/includes.js" data-includes="navbar,./res/includes/nav.html|fonts,./res/includes/fonts.html"></script>
 </head>
 
 <body>
@@ -20,24 +19,12 @@
         <h1 class="primary-text">Contact me</h1>
         <ul class="contacts-ul content-paragraph">
             <li>
-                <div style="background-color: red;"><a target="_blank" href="https://www.youtube.com/channel/UCvr5U1Okzi-UchoJiBES0rw">YouTube: Gigo_G</a></div>
-                <div style="background-color: rgb(141,66,253);"><a target="_blank" href="https://www.twitch.tv/gigo_g">Twitch: gigo_g</a></div>
-            </li>
-            <li>
                 <div style="background-color: royalblue;"><a target="_blank" href="https://twitter.com/gigog27">Twitter: gigog27</a></div>
-                <div style="background-color: purple;"><a target="_blank" href="https://www.instagram.com/gigog27/">Instagram: gigog27</a></div>
-            </li>
-            <li>
-                <div style="background-color: yellow;"><a style="color:black" target="_blank" href="/res/img/snapcode.jpg">Snapchat: gigog27</a></div>
                 <div style="background-color: rgb(90,0,204);"><a target="_blank" href="mailto:gigog27@yahoo.com">Email: gigog27@yahoo.com</a></div>
             </li>
             <li>
                 <div style="background-color: darkslategrey;"><a target="_blank" href="https://github.com/GiggioG/">Github: GiggioG</a></div>
                 <div style="background-color: cornflowerblue;"><a target="_blank" href="https://hub.docker.com/u/gigog">Docker Hub: gigog</a></div>
-            </li>
-            <li>
-                <div style="background-color: darkgoldenrod;"><a target="_blank" href="https://stackoverflow.com/users/11547090/gigo-g">Stackoverflow: Gigo_G</a></div>
-                <div style="background-color: turquoise;"><a target="_blank" href="https://gigog.imgur.com/">Imgur: GigoG</a></div>
             </li>
         </ul>
     </main>
