add syncrovid to projects

--- a/projects/index.html
+++ b/projects/index.html
@@ -117,6 +117,11 @@
                     <td>A basic SDL2 app all of my future SDL2 projects will be based on.</td>
                     <td><a target="_blank" href="https://github.com/GiggioG/sdl2Base">sdl2Base Github Repo</a></td>
                 </tr>
+                <tr>
+                    <td>SyncroVid</td>
+                    <td>A platform for watching videos simultaniously with other people.</td>
+                    <td><a target="_blank" href="https://github.com/GiggioG/SyncroVid">SyncroVid Github Repo</a></td>
+                </tr>
             </tbody>
             </tbody>
         </table>
