--- a/text-tools/index.html
+++ b/text-tools/index.html
@@ -64,7 +64,7 @@
 
         function wierdbg(bg) {
             let alpha = [
-                "абвгдежзийклмнопрстуфхцчшщъьюяАБВГДЕЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЬЮЯ", ["α", "b", "β", "g", "δ", "ε", "j", "ʒ", "i", "y", "c", "λ", "μ", "n", "ω", "p", "г", "σ", "t", "γ", "ƒ", "h", "t͡σ", "t͡ʃ", "ʃ", "ʃ͡t", "u", "ъ", "y͡γ", "y͡α", "Α", "B", "Β", "G", "Δ", "E", "J", "ʒ", "I", "Y", "C", "Λ", "M", "N", "Ω", "P", "Г", "Σ", "T", "Γ", "Ƒ", "H", "T͡Σ", "T͡Ʃ", "ʃ", "Ʃ͡T", "U", "Ъ", "Y͡Γ", "Y͡Α"]
+                "абвгдежзийклмнопрстуфхцчшщъьюяАБВГДЕЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЬЮЯ", ["α", "b", "β", "g", "δ", "ε", "j", "ʒ", "i", "y", "c", "λ", "μ", "n", "ω", "p", "г", "σ", "t", "γ", "ƒ", "h", "t͡σ", "t͡ʃ", "ʃ", "ʃ͡t", "u", "ъ", "y͡γ", "y͡α", "Α", "B", "Β", "G", "Δ", "E", "J", "Ʒ", "I", "Y", "C", "Λ", "M", "N", "Ω", "P", "Г", "Σ", "T", "Γ", "Ƒ", "H", "T͡Σ", "T͡Ʃ", "ʃ", "Ʃ͡T", "U", "Ъ", "Y͡Γ", "Y͡Α"]
             ];
             bg.split("").forEach(lett => {
                 if (alpha[0].indexOf(lett) != -1) {
