add dogehouse-bot to site

--- a/projects/index.html
+++ b/projects/index.html
@@ -128,6 +128,11 @@
                     <td><a target="_blank" href="https://github.com/GiggioG/splitEdit">splitEdit Github Repo</a></td>
                 </tr>
                 <tr>
+                    <td>dogehouse-bot</td>
+                    <td>A bot I made for <a target="_blank" href="https://github.com/benawad/dogehouse">Dogehouse</a> with nothing but raw websockets. I made it for fun because I like barebones stuff like this.</td>
+                    <td><a target="_blank" href="dogehouse-bot">dogehouse-bot Github Repo</a></td>
+                </tr>
+                <tr>
                     <td>WSID</td>
                     <td>A google sheet with a unique number for each writing system I know. It also includes neographies. WSID stands for WritingSystemID.</td>
                     <td><a class="projects-download-link" onclick="downloads({
