fix mistake in dogehouse-bot url

--- a/projects/index.html
+++ b/projects/index.html
@@ -130,7 +130,7 @@
                 <tr>
                     <td>dogehouse-bot</td>
                     <td>A bot I made for <a target="_blank" href="https://github.com/benawad/dogehouse">Dogehouse</a> with nothing but raw websockets. I made it for fun because I like barebones stuff like this.</td>
-                    <td><a target="_blank" href="dogehouse-bot">dogehouse-bot Github Repo</a></td>
+                    <td><a target="_blank" href="https://github.com/GiggioG/dogehouse-bot">dogehouse-bot Github Repo</a></td>
                 </tr>
                 <tr>
                     <td>WSID</td>
