added tank tactics

--- a/projects/index.html
+++ b/projects/index.html
@@ -98,6 +98,12 @@
                     <td><a target="_blank" href="https://github.com/GiggioG/MachineCells/">Machine Cells Github Repo</a></td>
                 </tr>
                 <tr>
+                    <td>Tank Tactics</td>
+                    <td>Tank Tactics is an implementation of the game "Tank Turn Tactics" from <a href="https://youtu.be/t9WMNuyjm4w">this GDC talk</a>. I made it as close as possible to the game described in the talk, so I recommend watching it and learning
+                        the rules that way.</td>
+                    <td><a target="_blank" href="https://github.com/GiggioG/tank-tactics/">Tank Tactics Github Repo</a></td>
+                </tr>
+                <tr>
                     <td>Notepad By User</td>
                     <td>A simple batch script I wrote a while ago, that gives multiple people different txt files. "Accounts" have no passwords.</td>
                     <td><a target="_blank" href="https://github.com/GiggioG/notepad-by-user/">Notepad By User Github Repo</a></td>
