remove unneccesary <br>

--- a/projects/index.html
+++ b/projects/index.html
@@ -40,7 +40,7 @@
     <i class="incl-navbar"></i>
     <main class="content-paragraph">
         <h1 class="primary-text">Projects</h1>
-        This page contains some projects made by me and<br> download links for them.
+        This page contains some projects made by me and download links for them.
         <table>
             <thead>
                 <tr>
