--- a/projects/index.html
+++ b/projects/index.html
@@ -73,18 +73,13 @@
                 </tr>
                 <tr>
                     <td>SHU</td>
-                    <td><b><i>Project temporarely on hold</i></b> A chrome extention that enables developers to make utility plugins for jitsimeet based systems like shkolo.bg.<br>The name comes from SHkoloUtilities.</td>
+                    <td>A chrome extention that enables developers to make utility plugins for jitsimeet based systems like shkolo.bg.<br>The name comes from SHkoloUtilities.</td>
                     <td><a target="_blank" href="https://github.com/GiggioG/shu/">Shu Github Repo</a></td>
                 </tr>
                 <tr>
                     <td>Flappy Bird</td>
                     <td>A simple clone of flappy bird I made in Processing</td>
                     <td><a target="_blank" href="https://github.com/GiggioG/flappy-bird/">Flappy Bird Github Repo</a></td>
-                </tr>
-                <tr>
-                    <td>Ghaincoin</td>
-                    <td>A cryptocurrency example. Still haven't even started</td>
-                    <td><a target="_blank" href="https://github.com/GiggioG/ghaincoin/">Ghaincoin Github Repo</a></td>
                 </tr>
                 <tr>
                     <td>Pc-Remote</td>
